--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@ The second plot uses tooltips. You can see the year, license type, and count whe
 
 <h2>Data Link</h2>
 <p>
-<a href="https://github.com/UIUC-iSchool-DataViz/is445_data/raw/main/licenses_fall2022.csv">Data Source: "https://github.com/UIUC-iSchool-DataViz/is445_data/raw/main/licenses_fall2022.csv"</a>
+<a href="https://github.com/UIUC-iSchool-DataViz/is445_data/raw/main/licenses_fall2022.csv">Data Source: https://github.com/UIUC-iSchool-DataViz/is445_data/raw/main/licenses_fall2022.csv</a>
 </p>
 
 <h2>Workbook Link</h2>
 <p>
-<a href="https://github.com/JacksonSong27/JacksonSong27.github.io/blob/main/python_notebooks/Workbook.ipynb">Workbook: "https://github.com/JacksonSong27/JacksonSong27.github.io/blob/main/python_notebooks/Workbook.ipynb"</a>
+<a href="https://github.com/JacksonSong27/JacksonSong27.github.io/blob/main/Workbook.ipynb">Workbook: https://github.com/JacksonSong27/JacksonSong27.github.io/blob/main/Workbook.ipynb</a>
 </p>
